# TSP_SA

./: .gitignore  150.txt  150_1.txt  150_instance.txt  2749.txt  40_instance.txt  B_150.txt  B_40.txt  README.md  best.txt  bests.txt  hello.txt  meson.build  results.txt  results_2.txt  results_4.txt  tsp_150.txt  tsp_150[2].txt  tsp_150[3].txt  tsp_150[4].txt  tsp_150[5].txt  tsp_150[6].txt  tsp_150[7].txt  tsp_150[8].txt  tsp_150_1000.txt  tsp_150_1000[2].txt  tsp_150_1000[3].txt  tsp_150_1000[4].txt  tsp_150_1000[5].txt  tsp_150_1000[6].txt  tsp_150_1000_t_800000.txt  tsp_150_1000_t_800000[2].txt  tsp_150_1000_t_800000[3].txt  tsp_150_1000_t_800000[4].txt  tsp_150_b_6200[1].txt  tsp_150_b_6200[2].txt  tsp_150_b_6200[3].txt  tsp_150_b_6200[4].txt  tsp_40_1000.txt  tsp_40_1000[2].txt  (+1 more)
data/: tsp.sql
data/plot/: README.md  plot.gp  plot_scale.gp
report/: README.md  ref.bib  report.aux  report.tex  report.toc
report/svg-inkscape/: results_1_svg-tex.pdf_tex  results_2_svg-tex.pdf_tex
src/: #tsp.c#  city.c  city.h  database_loader.c  database_loader.h  heuristic.h  main.c  normalizer.c  normalizer.h  path.c  path.h  report.c  report.h  sa.c  sa.h  tsp.c  tsp.h
test/: #test_city.c#  .#test_city.c  test_city.c  test_path.c
